Keycloak integration with Spring boot